--- a/tests/tox.ini
+++ b/tests/tox.ini
@@ -9,4 +9,4 @@ commands = nosetests -v --processes=2 functionaltests/
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 functionaltests/
+commands = flake8 --format=pylint functionaltests/
