--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ services:
 install:
     - "sudo apt-get update && sudo apt-get install -y python-virtualenv"
 script:
-    - "pip install tox"
-    - "make build"
+    - "sudo pip install tox"
+    - "make dependencies build"
     - "cd tests && make build-docker-images start-containers write-test-config"
     - "cd tests && tox"
 
