--- a/tests/docker/Dockerfile.slappy
+++ b/tests/docker/Dockerfile.slappy
@@ -10,7 +10,7 @@ EXPOSE 5358/tcp
 USER root
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get update && apt-get install -y bind9 
+RUN apt-get update && apt-get install -y bind9 dnsutils
 
 COPY ./named.conf.options /etc/bind/named.conf.options
 COPY ./rndc.key /etc/bind/rndc.key
