git submodules -> glide for vendoring dependencies
Stop using submodules, use glide because duh

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ services:
 
 install:
     - "sudo apt-get update && sudo apt-get install -y python-virtualenv"
+    - go get github.com/Masterminds/glide
+
 script:
     - "make dependencies build"
     - "./slappy -h || true"
